# Fairies

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  pyproject.toml
cache/: Bert.ipynb  bias_test.csv  bias_train.csv  dataset_cleaning.ipynb  test.py
cache/Dataset/: RacismDetectionDataSet.csv  racism_test.csv  racism_train.csv
configs/: config.yaml
data/: system_prompt.txt
src/byeias/backend/: api.py  backendcontroller.py  config_loader.py
src/byeias/backend/classification/: __init__.py  model_bias.py
src/byeias/backend/extraction/: text_extracter.py
src/byeias/backend/llm_explanation/: __init__.py  llm_communicator.py
src/byeias/backend/scripts/: test_backend.ipynb  test_model.ipynb
src/byeias/frontend/: index.html  package-lock.json  package.json
src/byeias/frontend/src/: App.jsx  index.css
src/byeias/frontend/src/components/: BiasEditor.jsx
